
Improved parsing for SQL editor: Table names tended to be marked as error (red) until another character was entered.

#331 Add "New SQL tab" --> The "New SQL Worksheet" tool bar button can now be
  changed into a "New SQL Tab" button which opens a new SQL tab inside the main Session window.


Bug fixes:

Keyboard shortcuts configuration: Result tab toolbar functions didn't allow user defined short cuts.

Export SQL result to file function: Write success dialog didn't display long export file paths well.

#1380 'Insert row' window didn't repaint right because of NullPointerException

Copy on tables didn't work as usual until the table's right mouse menu was opened the first time.

#1376 New function "open SQL file at session startup" causes Nullpointer exception

#1375 Bad MACOSX_SQUIRREL_PROPS in squirrel-sql-mac.sh

#1373 Substance L&F prevents application from starting.

#1372 Toolbar button "New SQL Worksheet" / "New SQL Tab" is ignored for keyboard tab order.

#1370 v.3.9.0 Export tab delimited CSV file no longer working
  Note: The "export complete" dialog now offers to open the export file's path in the OS specific file manager.

#1367 "Remove quotes" on an unquoted SQL statement deletes that statement

#1366 Clicking X in dialog "Unsaved changes" is now the same as "Cancel" but was the same as "No".

When the scripting functions "Store result of SQL in table" or "Create Data Script from SQL" were executed in
  an additional SQL tab the main SQL tab was selected.

#1368 The "Quote SQL" default shortcut was changed from (ctrl alt Q) to (ctrl shift Q).
  If you want the old shortcut back please use the new keyboard shortcuts configuration feature,
  see menu File --> "Global Preferences" --> tab "Keyboard shortcuts"

"Elapsed execution time" text field, which is visible when SQLs are executed, used to be too small.

Columns in completions list are are now sorted.
