@@ -62,6 +62,9 @@ Improved parsing for SQL editor: Table names tended to be marked as error (red) 
 
 Bug fixes:
 
+SQL editor: When the "replace tabs by spaces" option was selected (see menu File --> New Session Properties --> tab Syntax)
+  indenting multiple lines with tabs corrupted the lines.
+
 Keyboard shortcuts configuration: Result tab toolbar functions didn't allow user defined short cuts.
 
 Export SQL result to file function: Write success dialog didn't display long export file paths well.
